@@ -76,6 +76,9 @@ public:
   /** Model gradient wrt the parameter accessor */
   Matrix getGradientObservations() const;
 
+  /** @deprecated Candidate accessor */
+  Point getCandidate() const;
+
   /** ParameterMean accessor */
   Point getParameterMean() const;
 
